fixed hong kong schedule bug

--- a/_data/2022/hong-kong/schedule.yml
+++ b/_data/2022/hong-kong/schedule.yml
@@ -5,7 +5,7 @@
     - name: "9:30 - 10:30 Meet-and-greet (Opening remarks by Prof. CHIU Chi Yue, Dean of Social Science, CUHK)"
     - name: "10:30 - 12:30 Small group exercise on ethics [case study](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md)"
     - name: "12:30 - 13:30 Talk by Bo Huang"
-    - name: Afternoon: Meet Your Group!
+    - name: "Afternoon: Meet Your Group!"
 
 - date: 2022-06-21
   name: Collecting Digital Trace Data
