--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -38,6 +38,7 @@
     - name: "13:45 - 15:30 Theory of text classification"
     - name: "15:30 - 16:00 Break"
     - name: "16:00 - 18:00 Research talk: Clare Llewellyn. 'Who, or what, influences you online?'"
+    - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"
 
 - date: 2022-06-17
   name: Machine learning and prediction
