--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -48,6 +48,8 @@
     - name: "14:00 - 15:30 Population- and individual-level prediction"       
     - name: "15:30 - 16:00 Break"
     - name: "16:00 - 18:00 Research talk: Benjamin Bach"
+    - name: "Speaker slides [here](https://docs.google.com/presentation/d/e/2PACX-1vTO5zOgRpw4u4XGVHiqXhmdIMQLpQGeUWWlRqvrdYBD2Z-A6JzNOBB0bmYVaoXZGu4oLlgXgWZ8xDFw/pub?start=false&loop=false&delayms=3000)"  
+
     
 
 - date: 2022-06-18
