--- a/_data/2022/paris/teaching_assistants.yml
+++ b/_data/2022/paris/teaching_assistants.yml
@@ -13,4 +13,4 @@
 
 - name: Juliet Meynent
   image: /assets/images/juliet_meynent.jpg
-  bio: Juliet Meynet is a student in the ENSAE's engineer cycle. Their areas of interest are computational social sciences.
+  bio: Juliet Meynent is a student in the ENSAE's engineer cycle. Their areas of interest are computational social sciences.
