--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -7,7 +7,7 @@
   name: Introduction and Ethics 
   events:
     - name: "9:30 - 10:30 Introduction and logistics"
-    - name: "10:30 - 11:30 Talk by SICSS Alums"
+    - name: "10:30 - 11:30 Talk by SICSS Alums Michael FitzGerald and Katie Krumbholz"
     - name: "11:30 - 12:30 Small group discussions"
     - name: "12:30 - 1:30 Lunch"
     - name: "1:30 - 4:00 Small Group Exercise on Ethics."
@@ -26,12 +26,11 @@
   name: Text as Data 
   events:
     - name: "9:00 - 9:30 Logistics"
-    - name: "9:30 - 10:30 Highlights of Text as Data"
-    - name: "10:30-12:00 Group Exercise, Session I"
-    - name: "12:00 - 1:00 Lunch"
-    - name: "1:15 - 3:30 Group Exercise, Session II"
-    - name: "3:30 - 4:00 Group Presentations"
-    - name: "4:15 - 5:00 Live Tutorial TBD" 
+    - name: "9:30 - 11:00 Highlights of Text as Data"
+    - name: "11:00-12:00 Group Exercise, Session I"
+    - name: "12:00 - 1:30 Lunch"
+    - name: "1:30 - 4:00 Group Exercise, Session II"
+    - name: "4:00 - 4:30 Group Presentations"
 
 - date: June 23, 2022
   name: Machine Learning for Prediction and Classification
@@ -82,7 +81,8 @@
 - date: June 29, 2022
   name: Group work day
   events: 
-    - name: "9:00 - 12:00 Group work time"
+    - name: "9:00 - 11:00 Group work time"
+    - name: "11:00 - 11:45 Tutorial on spatial data by Jeffrey Coltman-Cormier"
     - name: "12:00 - 1:30 Talk by Gonzalo Rivero"
     - name: "1:30 - 2:30 Lunch"
     - name: "2:30 - 5:00 Group work time"
