--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -220,6 +220,8 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "3:45 - 4:00 Break"
+    - name: "4:00 - 5:00 Inaugural SICSS-Howard/Mathematica 2022 Motivational Address: Paula Moreno, Founder/President Manos Visibles, Member, Ford Foundation Board of Trustees (2007 to 2010), and Minister of Culture, Columbia (2007 to 2010) (*Zoom*) (video)"
 
 
 - date: 2022-06-23
