Video recording links added

--- a/_data/2022/singapore/schedule.yml
+++ b/_data/2022/singapore/schedule.yml
@@ -27,7 +27,7 @@
   name: Experiments in the Digital Era
   events:
     - name: "9:00 - 9:55 Morning session"
-    - name: "10:00 - 11:55 Guest lecture (virtual) by Dr. Hai Liang (CUHK): Detection of Content Incivility and Its Causal Effects using Machine Learning."
+    - name: "10:00 - 11:55 Guest lecture (virtual) by Dr. Hai Liang (CUHK): Detection of Content Incivility and Its Causal Effects using Machine Learning. [(video)](https://nus-sg.zoom.us/rec/share/LxStbLjKrgZ9StgTEHHyOQLEPMYo-tdN4bJFa5zG2nXM-2KvfEl3DvC1WR3TAYXf.06TDwmcmX0lfmNYK)"
     - name: "12:00 - 13:00 Lunch"
     - name: "13:00 - 17:00 Afternoon session and group activities"
 
@@ -35,7 +35,8 @@
   name: Analysis of Social Networks
   events: 
     - name: "9:00 - 9:55 Morning session"
-    - name: "10:00 - 11:55 Guest lecture (in person) by Dr. Prasanta Bhattacharya (A*STAR): Modeling the Dynamics of Social Networks and Behavior: Concepts, Methods and Applications."
+    - name: "10:00 - 11:55 Guest lecture (in person) by Dr. Prasanta Bhattacharya (A*STAR): Modeling the Dynamics of Social Networks and Behavior: Concepts, Methods and Applications. [(video)](https://nus-sg.zoom.us/rec/share/n9L7iV_bZn0QqZOZAZlzp0rhKfLVrP8THY1wKDkVm9Hwu6t23ly_VeEPQToF3sKq.7D4s8hML_IGRTmb6
+)"
     - name: "12:00 - 13:00 Lunch"
     - name: "13:00 - 16:30 Afternoon session and group activities"
     - name: "17:30 - 18:00 Dinner and social event"
