--- a/_data/2022/odissei/faculty.yml
+++ b/_data/2022/odissei/faculty.yml
@@ -18,5 +18,5 @@
   bio: "Adriënne is CEO and Co-Founder of EYRA, a company that develops sustainable onine platforms to support open and FAIR science. Adrienne has significant expertise in deploying platforms for the evaluation of benchmarking challenges and more broadly in collaborating with scientists in the development of research software. She holds a PhD in Biomedical Imaging from the University of Utrecht."
   
 - name: "Suze Zijlstra"
-  image: assets/images/Foto Suze Zijlstra.png
+  image: /assets/images/Foto Suze Zijlstra.png
   bio: "Dr. Suze Zijlstra is Community Manager of ODISSEI. She is responsible for communications, organising events, and the coordination of the educational programme of ODISSEI. In June, she will be coordinating the practical side of SICSS-ODISSEI. You can reach her through suze@odissei-data.nl."
