--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -49,6 +49,7 @@
     - name: "15:30 - 16:00 Break"
     - name: "16:00 - 18:00 Research talk: Benjamin Bach. 'Open Your Eyes: Finding Shapes for Your Data'"
     - name: "Speaker slides [here](https://docs.google.com/presentation/d/e/2PACX-1vTO5zOgRpw4u4XGVHiqXhmdIMQLpQGeUWWlRqvrdYBD2Z-A6JzNOBB0bmYVaoXZGu4oLlgXgWZ8xDFw/pub?start=false&loop=false&delayms=3000)"  
+    - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"
 
     
 
