--- a/_data/2022/london/schedule.yml
+++ b/_data/2022/london/schedule.yml
@@ -82,7 +82,7 @@
 - date: 2022-06-22
   name: "Group Project Work (Lead by Profs. Yeomans & Becker)"
   events:
-    - name: "Location - ICBS Room LG19B"
+    - name: "Location - ICBS Room LG19B (morning) and LTG (afternoon)"
     - name: "9:30  - 10:00 Light breakfast (optional)"
     - name: "10:00 - 12:00 Group Project Breakouts"
     - name: "12:00 - 1:00  Break for Lunch (provided)"
