--- a/_data/2022/hong-kong/participants.yml
+++ b/_data/2022/hong-kong/participants.yml
@@ -9,11 +9,35 @@
   bio: "Yun-Tzu CHANG is a first-year PhD student in Sociology at the University of Hong Kong (HKU). Before she joined HKU, she completed her Bachelor’s and M.Phil. degree in Sociology at the Chinese University of Hong Kong. Her current research interest and the focus of her PhD thesis is on the diasporic politics of overseas Chinese new migrants. Specifically, she intends to incorporate the extent to which and how technology is a mechanism that facilitates long-distance nationalism among overseas Chinese new migrants."
   website:
   
-   
+  
+- name: Seong Hah CHO
+  image: /assets/images/SeongHahCHO.jpg
+  bio: "Seong is a final year PhD student at the Psychology department at the University of Hong Kong. His current research relates to using network analyses to predict the long term outcomes of stroke. His research interests are applying network analyses in order to understand misinformation and translate such research into actionable outcomes."
+  website: 
+  
+  
 - name: Guo (Jerry) CHENG
   image: /assets/images/GuoCHENG.jpg
   bio: "Guo (Jerry) CHENG is a newly admitted student in UChicago’s Master program of Computational Social Science – Economics Track. He obtained his bachelor degree at the City University of Hong Kong, majoring in Finance, minoring in Mathematics and Computing. He has a keen interest in both empirical and theoretical research in economics, finance, public policy, sociology, etc., with cutting-edge computational techniques. Specific topics include CBDC, virtual banking, anti-money laundering, labor economics, innovation, etc."
   website:  
+
+
+- name: Tianwen DU
+  image: /assets/images/TianwenDU.jpg
+  bio: "Tianwen Du is currently an Academic Master student of Economics at Wuhan University. He obtained his bachelor’s degree in economics at Wuhan University and a double degree in Computer Science and Technology at Huazhong University of Science and Technology. His research interests include digital economy, information system, and using machine learning to make predictions or help with causal inference. His past research has focused on quantitative investment strategies and international financial markets."
+  website: 
+
+
+- name: Naikang FENG
+  image: /assets/images/NaikangFENG.jpg
+  bio: "Naikang FENG is a PhD student in the the Department of Politics and Public Administration at the University of Hong Kong. She studies policy implementation and adaption with a focus on the policy role of street-level organizations (SLO) and bureaucrats (SLB). She is now working on a project on China’s food safety regulatory reform where she uses text-as-data methods to analyze the varieties and dynamics of instrument mix employed in frontline policy implementation."
+  website:  
+
+
+- name: Yiqing GAN
+  image: /assets/images/YiqingGAN.jpg
+  bio: "Yiqing Gan is a postdoctoral fellow in the Sociology Department and the Centre for Population Research at the Chinese University of Hong Kong. Her research interests lie primarily in the fields of family demography and migration. Specific topics include (a) the construction and change of people’s childbearing desire in the current era of low fertility, and (b) the impact of migration trajectories on people’s subjective well-being. She is keen to apply computational methods to explore the two classic research fields above."
+  website:
 
 
 - name: Jing GUO
@@ -26,12 +50,6 @@
   image: /assets/images/ShuYiSeanGUO.jpg
   bio: "Sean GUO is a current PhD candidate at the University of Hong Kong. His research interests are uncovering mechanisms behind misinformation spread as well as neuropsychological investigations into misinformation learning and correction. He is currently doing EEG research into how misinformation memory changes over time and is interested in diversifying his methodologies to include real world data such as social media activity and text analysis."
   website:
-  
-  
-- name: Naikang FENG
-  image: /assets/images/NaikangFENG.jpg
-  bio: "Naikang FENG is a PhD student in the the Department of Politics and Public Administration at the University of Hong Kong. She studies policy implementation and adaption with a focus on the policy role of street-level organizations (SLO) and bureaucrats (SLB). She is now working on a project on China’s food safety regulatory reform where she uses text-as-data methods to analyze the varieties and dynamics of instrument mix employed in frontline policy implementation."
-  website:  
   
   
 - name: Xiaohui JIANG
@@ -81,6 +99,12 @@
   bio: "Jia (Jessica) LI is currently working as a scientific officer in the School of Public Health and Primary Care at the Chinese University of Hong Kong. Her research interests include social determinants of health, preventive intervention, and gerontechnology. She is keen to learn the methods to incorporate data science into social science and population health research."
   website:
   
+
+- name: Sinan LI
+  image: /assets/images/SinanLI.jpg
+  bio: "Sinan is a Master of Public Administration candidate at the London School of Economics and Political Science. She studies climate policy, development economics and international political economy."
+  website:
+  
   
 - name: Xiaotong LI
   image: /assets/images/XiaotongLI.jpeg
@@ -99,6 +123,12 @@
   bio: "Shengbin WEI is an MPhil student in the HKUST Social Science division. I am interested in quantitative history. I use historical multi-generational population datasets to study demographic behaviors in late imperial China. Besides traditional methods, I like exploring other approaches to study historical longitudinal datasets. I apply social network analysis to study personnel spatial mobility among officials in late imperial China with a government employee database."
   website:  
 
+
+- name: Xiaoqian Yue
+  image: /assets/images/XiaoqianYUE.png
+  bio: "Xiaoqian YUE is a PhD candidate at the Chinese University of Hong Kong. Her research focuses on the use of computational methods in the study of human behaviour. She uses various computational methods, including social network analysis, computational textual analysis, and machine learning. She is currently studying the diffusion of innovations in government behaviour in social media."
+  website:  
+  
 
 - name: Zhaojin ZENG
   image: /assets/images/ZhaojinZENG.jpg
