--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -52,7 +52,7 @@
   - name: "noon - 13:30 Lunch time" 
   - name: "13:30 - 14:30 Campus tour"
   - name: "14:30 - 16:00 Small group activity"
-  - name: "16:00 - 17:00 Participant research talks: Yuming Fang"
+  - name: "16:00 - 17:00 Participant research talks: Yuming Fang, Sara Bano"
   
 - date: June 25, 2022 
   name: Day Off
