--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -10,7 +10,10 @@
     - name: "9:00 - 9:15 Logistics"
     - name: "9:15 - 9:40 Chris Bail [What is Computational Social Science?](https://sicss.io/2022/materials/Intro_to_CSS/Intro_to_CSS.html)"
     - name: "9:40 - 10:00 Chris Bail [Why SICSS?](https://sicss.io/2022/materials/Why_SICSS/Why_SICSS.html)"
-    - name: "10:00 - 12:00 Casey Fiesler (University of Colorado Boulder)"
+    - name: "10:00 - 10:45 Casey Fiesler (University of Colorado Boulder) Data Ethics Section 1: Data isn't just data, and Ethical Considerations"
+    - name: "10:45 - 11:00 Coffee Break"
+    - name: "11:00 - 11:45 Casey Fiesler Data Ethics Section 2: Ethical Considerations and Case Study"
+    - name: "11:45 - 12:00 Q&A"  
     - name: "12:00 - 1:00 Lunch"
     - name: "1:00 - 2:30 Group Exercises"
     - name: "2:30 - 3:00 Break"
