--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -41,7 +41,7 @@
   - name: "10:00 - noon Tutorial on network analysis"
   - name: "noon - 13:30 Lunch time & speakers Dan Pemstein & Dane Mataic (NDSU) " 
   - name: "13:30 - 16:00 Small group activity"
-  - name: "16:00 - 17:00 Participant research talks: Prasanna Humagain, Sarah Thorngate"
+  - name: "16:00 - 17:00 Participant research talks: Prasanna Humagain, Sarah Thorngate, Lei Jiang"
   
 - date: June 24, 2022 
   name: Data Visualization 
