--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -4,7 +4,9 @@
     - name: "**09:00-10:00** Arrivals, coffee/tea"
     - name: "**10:00-11:30** Welcome and introduction to computational social science <br/> *Olga
       Boichak, Eduardo Altmann, Tristram Alexander, Lee Wallace*"
-    - name: "**11:30-12:30** Human research ethics <br/> *Olga Boichak*"
+    - name: "**11:30-12:30** Human research ethics
+    <br/> *Olga Boichak*"
+    <br/> [Workshop materials](https://aoir.org/reports/ethics3.pdf)"
     - name: "**12:30-13:00** Lunch break"
     - name: "**13:00-14:30** Human research ethics (group exercise) <br/> *Olga Boichak*"
     - name: "**14:30-16:00** Human research ethics (workshop) <br/> *Kate Lowrie, Alan Hales*"
