--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -19,7 +19,8 @@
     - name: "**9:30-11:00** Collecting digital trace data <br/> *Tristram Alexander*"
     - name: "**11:00-12:30** Academic research using the Twitter API (workshop)
     <br/> *Suhem Parack*
-    <br/> This workshop is open to the public, register [here](https://www.eventbrite.com.au/e/354293430187)"
+    <br/> This workshop is open to the public, register [here](https://www.eventbrite.com.au/e/354293430187)
+    <br/> Click [here](https://developer.twitter.com/en/portal/petition/academic/is-it-right-for-you) to request academic access to Twitter API"
     - name: "**12:30-13:00** Lunch break"
     - name: "**13:00-14:00** Research data management
     <br/> *Simon Musgrave, Ben Foley, Sam Hames*
