--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -10,7 +10,7 @@
   events:
     - name: "10:00 - 11:00 Introductions & Announcements"
     - name: "11:00 - 12:00 Why SICSSS? & Ethics, Pt. 1"
-    - name: "12:00 - 1:30 Guest Lecturer & Lunch: <a ../../../summer-institute/tree/master/assets/Jessie_Lecy.png/>Jesse Lecy</a>, Urban Institute"
+    - name: "12:00 - 1:30 Guest Lecturer & Lunch: <a ../../../summer-institute/tree/master/assets/Thema Monroe-White_ Jesse Lecy.pdf/>Jesse Lecy</a>, Urban Institute"
     - name: "1:30 - 2:30 Ethics, Pt. 2"
     - name: "2:30 - 4:30 Groups: Introduction, Work Session & Wrap-up"
 
