--- a/_data/2022/hong-kong/participants.yml
+++ b/_data/2022/hong-kong/participants.yml
@@ -124,7 +124,7 @@
   website:  
 
 
-- name: Xiaoqian Yue
+- name: Xiaoqian YUE
   image: /assets/images/XiaoqianYUE.png
   bio: "Xiaoqian YUE is a PhD candidate at the Chinese University of Hong Kong. Her research focuses on the use of computational methods in the study of human behaviour. She uses various computational methods, including social network analysis, computational textual analysis, and machine learning. She is currently studying the diffusion of innovations in government behaviour in social media."
   website:  
