--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -1,4 +1,5 @@
-- date: All times are in Central Daylight Time (CDT); *Schedule is subject to change*
+- date: All times are in Central Daylight Time (CDT)
+- date: Venue is located at A.Glenn Hill Center 126
 
 - date: June 19, 2022
   name: Welcoming Dinner
