--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -1,5 +1,4 @@
-- date: All times are in Central Daylight Time (CDT)
-- date: Venue is located at A.Glenn Hill Center 126
+- date: All events are in Central Daylight Time (CDT) at A.Glenn Hill Center 126
 
 - date: June 19, 2022
   name: Welcoming Dinner
