--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -5,7 +5,7 @@
 
 - name: Diego Alburez-Gutierrez
   image: /assets/images/diego.JPG
-  bio: "<p align='justify'>Diego Alburez-Gutierrez (PhD in Demography, London School of Economics 2018) is a Research Scientist at the Max Planck Institute for Demographic Research, where he specialises in inter-generational demography. His work integrates non-traditional data (e.g., from digital or computational sources) with established demographic sources (e.g. censuses and population registers).</p>"
+  bio: "<p align='justify'>Diego Alburez-Gutierrez (PhD in Demography, London School of Economics 2018) is Head of the Research Group “Kinship Inequalities” at the Max Planck Institute for Demographic Research in Germany. He specialises in inter-generational demography. His work integrates non-traditional data (e.g., from digital or computational sources) with established demographic sources (e.g. censuses and population registers).</p>"
   website: http://alburez.me/
   
 - name: Lateef Amusa
