--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -15,7 +15,7 @@
     Over the last few years, free and open-source tools like R have become increasingly popular in research environments. The R programming language offers analysts a way to perform data manipulation and wrangling, analysis and modelling, and visualisation in one place. R can also be used to develop presentations, reports, books and even websites.
     <br/> In this presentation, the speakers will introduce R as a tool for humanities and social science researchers. We will look at a handful of specific applications of R. We will also introduce the audience to useful resources, communities, and learning opportunities.
     <br/> Finally, we will explore a case study where R was used as part of a PhD study to perform text mining on legal documents. This project also inspired the development of an open educational resource during a mentorship through Open Life Sciences (OLS) that aims to highlight the benefits of using R in the legal profession and research environments."
-    - name: "**15:00-16:00** Invited Presentation: "
+    - name: "**15:00-16:00** From social scientist to computational social scientist: *Redefining research agenda in SSA*"
     - name: "**16:00-17:30** Tutorial: Introduction to R for CSS"
     - name: "**17:30-18:00** Announcements "
     - name: "**18:00-** Dinner"
