--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -46,9 +46,9 @@
     - name: "**10:00-11:00** Mapping Online Problematic Content: Mixing Qualitative Approaches with State-of-the-art Machine Learning
        <br/> *Marian-Andrei Rizoiu*
        <br/> This workshop is open to the public, register [here](https://www.eventbrite.com.au/e/354455023517)"
-    - name: "**11:00-12:30** Surveys in the digital age <br/> *Olga Boichak*"
+    - name: "**11:00-12:30** Project work: composition of teams"
     - name: "**12:30-13:00** Lunch break"
-    - name: "**15:30-17:00** Project work: composition of teams, research design"
+    - name: "**15:30-17:00** Project work: research design"
     
 - date: 2022-06-24
   name: Computational Social Science Fair (Data61 Eveleigh campus)
