--- a/_data/2022/amu-law/schedule.yml
+++ b/_data/2022/amu-law/schedule.yml
@@ -30,7 +30,7 @@
 
 - date: June 23 - Thursday, 2022
   events:
-    - name: "12:30 - 12:45 – Intro into group exercise on designing the survey research"
+    - name: "12:30 - 12:45 – Intro into group exercise on designing the survey research [Lesson plan here] (https://docs.google.com/document/d/1ikc3WLLJqiYKr-sDUvSxpBgxt-w9lk6ZHpfTRA4dAuc/edit?usp=sharing)"
     - name: "12:45 - 14:15 – Group exercise – preparing an online survey"
     - name: "14:15 - 15:00 – Lunch break (incl. breakout rooms to discuss ideas for group projects)"
     - name: "15:00 - 16:15 - Brief analysis of the collected data in R"
