--- a/_data/2022/paris/participants.yml
+++ b/_data/2022/paris/participants.yml
@@ -88,3 +88,7 @@
 - name: Olga Suslova
   image: assets/images/olga_suslova.jpg
   bio: Olga Suslova is a PhD student in urban studies at the Laboratory Technology, Territories and Societies (CNRS, Ecole des Ponts ParisTech, Gustave Eiffel University). She holds a Master's degree in urban planning and studies from the Paris School of Urban Planning and a Diplôme in geography from the Ecole normale supérieure in Paris. Her current research examines postsocialist urban transformations in Saint Petersburg (Russia). 
+
+- name: Yann Goltrant
+  image: assets/images/yann_goltrant.jpg
+  bio: Yann Goltrant is a PhD candidate at University Paris-Dauphine. His research interest focus on the economic elites, and more specifically on the boards of directors. Building on data gathered from different sources (e.g. annual reports, Who's Who), he studies the careers of board members in the UK.
