--- a/_data/2022/lisbon/schedule.yml
+++ b/_data/2022/lisbon/schedule.yml
@@ -2,7 +2,7 @@
  
 - date: 2022-06-19
   events:
-    - name: "6:00 - 8:00pm Meet-and-greet at Rooftop Bar, Nova SBE campus"
+    - name: "6:00 - 8:00pm Meet-and-greet at Grande Onda (https://www.grandeonda.pt/) at Carcavelos beach"
  
 - date: 2022-06-20
   name: Introduction and Ethics
