foxed sydney bug

--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -88,7 +88,7 @@
     - name: "**12:30-13:00** Lunch break"
     - name: "**13:00-15:30** The Image Machine
        <br/> *Daniel Angus*
-       <br/> [Workshop materials](https://osf.io/preprints/socarxiv/2cwsu/)"
+       <br/> [Workshop materials](https://osf.io/preprints/socarxiv/2cwsu/)
        <br/> This workshop is open to the public, register [here](https://www.eventbrite.com.au/e/354484150637)"
     - name: "**15:30-17:00** Project work"
     
