--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -10,7 +10,7 @@
     - name: "10:30 - 11:30 Talk by SICSS Alums Michael FitzGerald and Katie Krumbholz"
     - name: "11:30 - 12:30 Small group discussions"
     - name: "12:30 - 1:30 Lunch"
-    - name: "1:30 - 4:00 Small Group Exercise on Ethics."
+    - name: "1:30 - 4:00 Small Group Exercise on Ethics: [Ethics Slides](https://docs.google.com/presentation/d/1DaCujBvMyoniAyLfX1zi8rqlf_LqYOtb/edit?usp=sharing&ouid=104885152488187255489&rtpof=true&sd=true), [Group Activity](https://docs.google.com/document/d/1TAHOtVTZLFMWpM5SQ9qJZGBvbLqYbn4P/edit?usp=sharing&ouid=104885152488187255489&rtpof=true&sd=true)   "
  
 - date: June 21, 2022
   name: Digital Trace Data
